21.3
-----
* [*] [internal] Weekly roundup notifications and scheduling can be turned off for WordPress as part of Jetpack focus behind a feature flag. [#19590]
* [*] Fixed a minor UI issue where the segmented control under My SIte was being clipped when "Home" is selected. [#19595]

21.2
-----
* [*] [internal] Refactored fetching posts in the Reader tab. [#19539]
* [*] Fixed an issue where the message "No media matching your search" for the media picker is not visible [#19555]

21.1
-----
* [**] [Jetpack-only] We added a new landing screen with a cool animation that responds to device motion! [#19251, #19264, #19277, #19381, #19404, #19410, #19432, #19434, #19442, #19443, #19468, #19469]
* [*] [internal] Database access change: the 'new Core Data context structure' feature flag is turned on by default. [#19433]
* [***] [Jetpack-only] Widgets are now on Jetpack. Find Today, This Week, and All Time Widgets to display your Stats on your home screen. [#19479]
* [*] Block Editor: Fixed iOS Voice Control support within Image block captions. [https://github.com/WordPress/gutenberg/pull/44850]
* [***] Dropped support for iOS 13. Now supporting iOS 14.0 and above. [#19509]

21.0
-----
* [*] Fixed an issue where the cached notifications are retained after logging out of WordPress.com account [#19360]
* [**] [Jetpack-only] Added a share extension. Now users can share content to Jetpack through iOS's share sheet. This was previously only available on the WordPress app. [#19383]
* [*] Update launch screen. [#19341]
* [*] [Jetpack-only] Add ability to set custom app icon for Jetpack app. [#19378]
* [**] [Jetpack-only] Added a "Save as Draft" extension. Now users can save content to Jetpack through iOS's share sheet. This was previously only available on the WordPress app. [#19414]
* [**] [Jetpack-only] Enables Rich Notifications for the Jetpack app. Now we display more details on most of the push notifications. This was previously only available on the WordPress app. [#19415]